<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.actvity.store.location.StoreLocationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_login_gradient"
        android:orientation="horizontal"
        android:padding="@dimen/padding_8dp">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/et_min_height_38dp"
            android:layout_weight="1"
            android:background="@drawable/bg_transparent_edit_text"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/padding_medium"
            android:hint="@string/label_home_hint_et"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="@dimen/padding_8dp"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_blue_soft_et"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:text="@string/label_store_location_back"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/label_store_search_result"
            android:textAppearance="@style/TextAppearance.Bold.Semi"
            android:textColor="@color/color_grey_soft"
            android:textSize="@dimen/text_small"
            android:textStyle="italic" />


        <com.jude.easyrecyclerview.EasyRecyclerView
            android:id="@+id/rvItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_empty="@layout/view_empty"
            app:layout_error="@layout/view_error"
            app:layout_progress="@layout/view_progress"
            app:scrollbarStyle="insideOverlay"
            tools:listitem="@layout/item_store" />

    </LinearLayout>

</LinearLayout>